--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     },
     "require-dev": {
         "phpstan/phpstan": "^1.8",
+        "thecodingmachine/safe": "^2.0",
         "roave/security-advisories": "dev-latest"
     },
     "config": {
@@ -25,6 +26,9 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
+    "suggest": {
+        "thecodingmachine/safe": ""
+    },
     "scripts": {
         "lint": "./vendor/bin/php-cs-fixer fix --no-interaction --verbose"
     }
